# Ray-tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  FUTURE_PLANS.md  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  raytracer
core/: hit.c  hit.h  ray.c  ray.h  vec3.c  vec3.h
docs/: ARCHITECTURE_IMPROVEMENTS.md  GEOMETRY_AND_MATERIALS.md  RENDERING_FEATURES.md  TOOLING_AND_ECOSYSTEM.md
engine/: bdpt.cpp  bdpt.hpp  bvh.hpp  main.cpp  material.hpp  photon_integrator.hpp  photon_map.hpp  primitives.hpp  profiler.hpp  renderer.cpp  renderer.hpp  scene.hpp  scene_loader.hpp  sphere.hpp  stb_impl.cpp  texture.hpp
engine/cuda/: cuda_api.hpp  cuda_common.cuh  cuda_math.cuh  cuda_pathtracer.cu  cuda_pathtracer.cuh  cuda_scene.cuh  cuda_test.cu
engine/plt/: beam.hpp  fresnel.hpp  mueller.hpp  plt.hpp  plt_integrator.hpp  stokes.hpp  vec3.hpp
engine/plt/tests/: plt_test.cpp
engine/spectral/: dispersion.hpp  hwss.hpp  mnee.hpp  spectral_data.hpp  spectral_renderer.hpp  spectrum.hpp
scenes/: area_light_demo.json  caustics_mnee_test.json  caustics_test.json  cornell_box.json  cornell_box_nee_only.json  cornell_box_no_nee.json  cornell_box_quad.json  demo.json  dispersion_demo.json  earth_demo.json  environment_demo.json  path_trace_demo.json  photon_test.json  plt_demo.json  prism_dispersion.json  prism_test.json  test_plt_simple.json  thin_film_demo.json
